# indicator-immersive

./: CMakeLists.txt  README.md  indicator-immersive.desktop  indicator-immersive.desktop.in  manifest.json.in
indicator/: CMakeLists.txt  com.kugiigi.indicator.immersive  install.sh  kugiigi-indicator-immersive.conf  kugiigi-indicator-immersive.py  kugiigi.indicatorimmersive.indicator  kugiigi.indicatorimmersive.service  uninstall.sh
plugins/Indicator/: indicator.cpp
po/: CMakeLists.txt  fr.po  indicator-immersive.pot  nl.po
qml/: Main.qml
